--- a/.lando.yml
+++ b/.lando.yml
@@ -1,13 +1,13 @@
-name: lando-pantheon-workflow
+name: mar6-2
 recipe: pantheon
 config:
   framework: drupal8
   env: dev
-  site: lando-pantheon-workflow
-  id: 34775439-5546-46a8-936b-5e55dde4b462
+  site: mar6-2
+  id: 6fa231b4-9a55-4976-bd8b-d11cb5e1f1b1
 events:
   post-db-import:
-    - appserver: "cd $LANDO_MOUNT && composer install"
+    - appserver: cd $LANDO_MOUNT && composer install
 services:
   appserver:
     overrides:
@@ -30,5 +30,3 @@ tooling:
   behat:
     service: appserver
     cmd: /app/vendor/bin/behat
-  # git:
-  #   service: appserver
